--- a/css/style.css
+++ b/css/style.css
@@ -91,28 +91,48 @@ footer {
 
 /* main */
 
-.content-container {
+section {
     padding: 50px 150px;
 }
 
-.content-container .item-container {
+.information  h1{
+    text-align: center;
+}
+
+h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
+}
+
+section .item-container {
     display: flex;
     padding: 36px 64px;
     gap: 36px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-/* TODO: make image/illustration square */
+.item {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    text-align: center;
+    max-width: 150px;
+}
+
 .item-image {
     border: 2px solid #3882f6;
-    min-width: auto;
-    min-height: 100px;
+    min-width: 150px;
+    min-height: 150px;
+    height: auto;
+    width: auto;
     border-radius: 12px;
 }
 
 
 
 .quote-container {
-    padding: 75px 150px;
     background-color: #e5e7eb;
 }
 
@@ -131,16 +151,15 @@ footer {
 
 .call-to-action {
     display: flex;
-    /* justify-content: center; */
-    margin: 64px 150px;
     padding: 32px 64px;
     border-radius: 5px;
     background-color: #3882f6;
+    justify-content: space-between;
 }
 
 .call-to-action .sign-up {
+    display: flex;
     border: 1px solid #fff;
-    margin: auto;
 }
 
 .call-to-action-title {
