--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ section .item-container {
     background-color: #e5e7eb;
 }
 
-.quote {
+cite {
     font-size: 36px;
     font-weight: lighter;
     color: #1F2937;
