--- a/css/style.css
+++ b/css/style.css
@@ -149,12 +149,22 @@ cite {
     padding: 5px 30px;
 }
 
+.call-to-action-container {
+    display: flex;
+    justify-content: center;
+}
+
 .call-to-action {
     display: flex;
     padding: 32px 64px;
     border-radius: 5px;
     background-color: #3882f6;
     justify-content: space-between;
+    max-width: 600px;
+}
+
+.call-to-action-text {
+    margin-right: 64px;
 }
 
 .call-to-action .sign-up {
